--- a/Autenticacion/templates/sidebar.html
+++ b/Autenticacion/templates/sidebar.html
@@ -165,14 +165,14 @@
             <li class="nav-item mb-2">
                 <a class="nav-link text-white d-flex align-items-center"
                     href="{% url 'reportes:listar_reportes' %}">
-                    <i class="fa-sharp fa-solid fa-rectangle-list"></i>
+                    <i class="fa-sharp fa-solid fa-rectangle-list me-2"></i>
                     <span class="nav-text">Reportes de Incidentes</span>
                 </a>
             </li>
             {% endif %}
         </ul>
     </div>
-    <div class="logout d-flex justify-content-center align-items-center">
+    <div class="logout d-flex justify-content-center mt-3 align-items-center">
         <a  class=" d-flex justify-content-center" href="{% url 'login:logout' %}">
             <button class="Btn">
                 <div class="sign">
