--- a/Autenticacion/templates/sidebar.html
+++ b/Autenticacion/templates/sidebar.html
@@ -165,7 +165,7 @@
             <li class="nav-item mb-2">
                 <a class="nav-link text-white d-flex align-items-center"
                     href="{% url 'reportes:listar_reportes' %}">
-                    <i class="fa-sharp fa-solid fa-rectangle-list"></i>
+                    <i class="fa-sharp fa-solid fa-rectangle-list me-2"></i>
                     <span class="nav-text">Reportes de Incidentes</span>
                 </a>
             </li>
