--- a/Autenticacion/Modulos/Login/templates/credenciales.html
+++ b/Autenticacion/Modulos/Login/templates/credenciales.html
@@ -14,17 +14,12 @@
         <td style="padding: 30px; text-align: left; color: #333333;">
           <h2 style="font-size: 22px; color: #333333;">Bienvenido, {{ nombre }}.</h2>
           <p style="font-size: 16px; line-height: 1.6; color: #555555; margin: 20px 0;">
-            A continuación, encontrarás tus credenciales de acceso. Guarda esta información en un lugar seguro.
+            A continuación, encontrarás tus credenciales de acceso:
           </p>
           <div style="background-color: #f9f9f9; padding: 15px; border-radius: 5px; margin-top: 15px;">
             <div style="margin: 5px 0; font-size: 18px;"><strong>Usuario:</strong> {{ user }}</div>
-            <div style="margin: 5px 0; font-size: 18px;"><strong>Correo:</strong> {{ email }}</div>
-            <div style="margin: 5px 0; font-size: 18px;"><strong>Contraseña:</strong> {{ password }}</div>
+            <div style="margin: 5px 0; font-size: 18px;"><strong>Contraseña temporal:</strong> {{ password }}</div>
           </div>
-        
-          <p style="font-size: 16px; line-height: 1.6; color: #555555; margin: 20px 0;">
-            Si tienes alguna pregunta, no dudes en ponerte en contacto con nosotros.
-          </p>
         </td>
       </tr>
 
