--- a/Autenticacion/Modulos/Coordinador/Calendario/templates/crear_calendario.html
+++ b/Autenticacion/Modulos/Coordinador/Calendario/templates/crear_calendario.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block controls %}
-<div class="form-grid">
+<div class="form-grid grid-cal">
     <div class="input-div one">
         <div class="i">
             <i class="fa-sharp fa-solid fa-window-maximize"></i>
