--- a/Autenticacion/Modulos/Coordinador/Turno/templates/crear_turno.html
+++ b/Autenticacion/Modulos/Coordinador/Turno/templates/crear_turno.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block controls %}
-<div class="form-grid">
+<div class="form-grid grid-turn">
     <div class="input-div one">
         <div class="i">
             <i class="fa-sharp fa-solid fa-window-maximize"></i>
