--- a/Autenticacion/static/css/diseño_forms.css
+++ b/Autenticacion/static/css/diseño_forms.css
@@ -19,15 +19,16 @@ header {
     display: grid;
     grid-template-columns: repeat(3, 1fr); 
     gap: 5px 20px;
-	width: 700px;
+	width: 100%;
+}
+.form-grid.grid-cal{
+	grid-template-columns: repeat(2, 1fr);
 }
 
-
-
+.form-grid.grid-turn{
+	grid-template-columns: repeat(2, 1fr);
+}
    
-
-
-
 .form-grid .input-div
 {
 	position: relative;
@@ -223,24 +224,16 @@ header {
 
 	.form-grid {
 		grid-template-columns: repeat(2, 1fr);
-		width: 600px;
 		gap: 20px;
 	}
 
 
 }
 
-@media screen and (max-width: 1000px){
-	.form-grid {
-		width: 400px;
-		gap: 15px;
-	}
-}
 
 @media screen and (max-width: 700px){
 	.form-grid {
 		grid-template-columns: repeat(1, 1fr);
-		width: 300px;
 	}
 
 }
