--- a/Autenticacion/templates/form.html
+++ b/Autenticacion/templates/form.html
@@ -13,7 +13,7 @@
 <form class="container text-dark d-flex" method="POST" action="{{ action_save }}" enctype="multipart/form-data"
     name="registro">
     {% csrf_token %}
-    <div class="modal-dialog modal-lg my-auto" role="document">
+    <div class="modal-dialog modal-lg mod my-auto" role="document">
         <div class="modal-content shadow my-auto mx-auto"> <!-- Clase aplicada aquí -->
             <div class="modal-header bg-dark text-white rounded-top-3">
                 <h2 class="modal-title text-center w-100 p-2">{{ titulo }}</h2>
