Mejora de registros en registro de periodo

--- a/Autenticacion/Modulos/Coordinador/Calendario/templates/crear_calendario.html
+++ b/Autenticacion/Modulos/Coordinador/Calendario/templates/crear_calendario.html
@@ -24,3 +24,10 @@
     </div>
 </div>
 {% endblock %}
+
+{% block js %}
+<script src="{% static 'js/autocomplete_input.js' %}"></script>
+<script src="{% static 'js/input_effect.js' %}"></script>
+<script src="{% static 'js/fecha_limitada.js' %}" ></script>
+<script src="{% static 'js/ocultar_mensajes.js'%}"></script>
+{% endblock %}
