--- a/Autenticacion/Modulos/Login/templates/rol/crear_rol.html
+++ b/Autenticacion/Modulos/Login/templates/rol/crear_rol.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block controls %}
-<div class="form-grid">
+<div class="form-grid grid-rol">
     <div class="input-div one">
         <div class="i">
             <i class="fa-solid fa-user"></i>
