--- a/Autenticacion/Modulos/Coordinador/Calendario/templates/crear_planificacion.html
+++ b/Autenticacion/Modulos/Coordinador/Calendario/templates/crear_planificacion.html
@@ -3,7 +3,7 @@
 
 {% block controls %}
 
-<div class="form-grid">
+<div class="form-grid grid-plan">
     <div class="input-div one">
         <div class="i">
             <i class="fa-sharp fa-solid fa-window-maximize"></i>
