--- a/Autenticacion/static/css/diseño_forms.css
+++ b/Autenticacion/static/css/diseño_forms.css
@@ -28,7 +28,24 @@ header {
 .form-grid.grid-turn{
 	grid-template-columns: repeat(2, 1fr);
 }
-   
+
+.form-grid.grid-plan{
+	grid-template-columns: repeat(2, 1fr);
+}
+
+
+.form-grid.grid-rol{
+	grid-template-columns: repeat(1, 1fr);
+}
+
+.form-grid.grid-nov{
+	grid-template-columns: repeat(2, 1fr);
+}
+
+.form-grid.grid-tip{
+	grid-template-columns: repeat(1, 1fr);
+}
+
 .form-grid .input-div
 {
 	position: relative;
@@ -94,7 +111,6 @@ header {
 .form-grid .input-div.focus > .i > i{
 	color: #12171e;
 }
-
 
 
 .input-div .div span[id='toggleBtn1'],
@@ -221,9 +237,8 @@ header {
 /* Media Queries para adaptabilidad */
 @media screen and (max-width: 1050px){
 
-
 	.form-grid {
-		grid-template-columns: repeat(2, 1fr);
+		grid-template-columns: repeat(2, 1fr) !important;
 		gap: 20px;
 	}
 
@@ -233,7 +248,7 @@ header {
 
 @media screen and (max-width: 700px){
 	.form-grid {
-		grid-template-columns: repeat(1, 1fr);
+		grid-template-columns: repeat(1, 1fr) !important;
 	}
 
 }
