--- a/Autenticacion/templates/navbar.html
+++ b/Autenticacion/templates/navbar.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <!-- Logo -->
         <a href="/" class="navbar-brand">
-            <img src="{% static 'img/inci_manager.png' %}" class="mx-4" width="50px">
+            <img src="{% static 'img/logo_rim.png' %}" class="mx-4" width="75px">
         </a>
 
         <!-- Botón para colapsar el menú en pantallas móviles -->
